Bootstrap fixed formatting

--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
             <div class="container p-4 bgw">
                     <h2>About Me</h2>
                     <hr>
-            <div class="container d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-md-start section-wrapper">
-                <img class="p-1 border" src="./assets/images/Profile.png" alt="Profile Image">
+            <!-- <div class="container d-flex flex-wrap flex-md-nowrap flex-sm-nowrap flex-xs-nowrap justify-content-md-start  justify-content-sm-start justify-content-xs-start section-wrapper"> -->
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                <img class="p-1 border img-responsive" src="./assets/images/Profile.png" alt="Profile Image">
+                </div>
+                <div class="col-md-8 col-sm-12">
                 <p class="ml-2 pl-2">
                         <ul>
                                 <li class="bullet">28 years old</li>
@@ -59,9 +63,11 @@
                                 <li class="bullet">B.S. Elementary Education</li>
                                 <li class="bullet">Arcade Dance Game Specialist</li>
                                 <li class="bullet">Viral Video Celebrity</li>
-                            </ul>
+                        </ul>
                 </p>
-            </div>
+                </div>
+                </div>
+            <!-- </div> -->
         
 
    <!-- Footer -->
