fixed portfolio image in index and updated live links in portfolio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- <div class="container d-flex flex-wrap flex-md-nowrap flex-sm-nowrap flex-xs-nowrap justify-content-md-start  justify-content-sm-start justify-content-xs-start section-wrapper"> -->
             <div class="row">
                 <div class="col-md-4 col-sm-12">
-                <img class="p-1 border img-responsive" src="./assets/images/Profile.jpg" alt="Profile Image">
+                <img class="p-1 border img-responsive" src="./assets/images/profile.jpg" alt="Profile Image">
                 </div>
                 <div class="col-md-8 col-sm-12">
                 <p class="ml-2 pl-2">
