Added trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,11 +99,11 @@
                     </div>
                      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <div class="card">
-                                    <!-- <a href="https://thanhqd90.github.io/"><img src="./assets/images/icon5.png" class="card-img-top" alt="Project 5"/></a> -->
+                                    <a href="https://thanhqd90.github.io/HIMYM-Trivia-Game/"><img src="./assets/images/icon5.png" class="card-img-top" alt="Project 5"/></a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Project Title</h5>
+                                        <h5 class="card-title">HIMYM Trivia</h5>
                                         <div class="card-text">
-                                            <p>Project description</p>
+                                            <p>jQuery</p>
                                         </div>
                                     </div>
                                 </div>
