--- a/portfolio.html
+++ b/portfolio.html
@@ -111,11 +111,11 @@
                     </div>
                      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <div class="card">
-                                    <!-- <a href="https://thanhqd90.github.io/"><img src="./assets/images/icon6.png" class="card-img-top" alt="Project 6"/></a> -->
+                                    <a href="https://thanhqd90.github.io/GIPHY-API/"><img src="./assets/images/icon6.png" class="card-img-top" alt="Project 6"/></a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Project Title</h5>
+                                        <h5 class="card-title">Pokemon Giphy</h5>
                                         <div class="card-text">
-                                            <p>Project description</p>
+                                            <p>API / Ajax Calls</p>
                                         </div>
                                     </div>
                                 </div>
